--- a/style.css
+++ b/style.css
@@ -72,3 +72,55 @@ nav ul li{
     font-size: 18px;
     margin-bottom: 30px;
 }
+
+/* main part start */
+
+main{
+   max-width: 1140px;
+   margin: 0 auto;
+}
+
+section{
+    margin-top: 130px;
+}
+
+.about{
+    background: #FFF8F3;
+    padding: 130px 150px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.about-title{
+    font-size: 35px;
+    margin-bottom: 45px;
+    font-weight: 700;
+}
+
+.about-description{
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info{
+
+}
+
+.info-title{
+    font-size: 20px;
+    color: #757575;
+}
+
+.info-description{
+    font-size: 20px;
+    font-weight: 700;
+    color: #474747;
+}
+
+
