--- a/style.css
+++ b/style.css
@@ -122,3 +122,37 @@ section{
     color: #474747;
     font-weight: 700;
 }
+
+
+.what-i-do{
+    
+}
+
+.section-title{
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+}
+
+.skill-title{
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+
+.skill-description{
+    color: #757575;
+}
